# mod-updater

./: .gitignore  Cargo.toml  README.md  config.toml  readme.txt
.github/workflows/: rust.yml
src/: main.rs
src/download/: mod.rs
src/scanner/: mod.rs
src/structs/: config.rs  fabric_json.rs  mod.rs  modrinth_mod.rs  modrinth_version.rs
