[package]
name = "mod_updater"
version = "1.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.0-rc.7", features = ["derive"] }
futures-util = "0.3.17"
indicatif = {version = "0.16.2", features = ["rayon"]}
rayon = "1.5.1"
reqwest = { version = "0.11.7", features = ["blocking", "stream"] }
serde = "1.0.131"
serde_derive = "1.0.131"
serde_json = "1.0"
toml = "0.5"
zip = "0.5.13"
